<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="seanharrington.what2eat.MainActivity" >
	 
    <item 
        android:id="@+id/action_settings"
        android:orderInCategory="97"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings" 
        android:icon="@android:drawable/ic_menu_help"
        android:visible="true" android:enabled="true"
        />
    
    <item android:id="@+id/upload" 
        android:orderInCategory="96" 
        android:title="@string/upload" 
        android:showAsAction="ifRoom" android:visible="true" android:enabled="true" 
        android:icon="@android:drawable/ic_menu_upload"/>
    
    <item android:id="@+id/menu_bar_report" 
        android:orderInCategory="99" 
        android:title="@string/report" 
        android:showAsAction="ifRoom" android:visible="true" android:enabled="true" 
        android:icon="@android:drawable/ic_menu_agenda"/>
    
     
    <item android:id="@+id/menu_bar_user" 
        android:orderInCategory="100" 
        android:title="@string/user_data" 
        android:showAsAction="ifRoom" android:visible="true" android:enabled="true" 
         android:icon="@android:drawable/ic_menu_agenda"/>
    
    <item android:id="@+id/menu_bar_home" 
        android:orderInCategory="98" 
        android:title="@string/home" 
        android:showAsAction="ifRoom" android:visible="true" android:enabled="true" 
        android:icon="@android:drawable/ic_menu_agenda"/>
    
    

</menu>
