
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="seanharrington.what2eat.MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:configChanges="keyboardHidden"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/description"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/main_user_data"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/user_data" />

    <Button
        android:id="@+id/main_report"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/main_user_data"
        android:layout_below="@+id/main_user_data"
        android:layout_marginTop="24dp"
        android:text="@string/report" />

    <TextView
        android:id="@+id/maintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
