<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context="seanharrington.what2eat.UserActivity" >

    <Spinner
        android:id="@+id/spinner_user_name"
        style="@style/SpinnerAsEditText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="14dp"
        android:background="#88cccccc" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:ellipsize="end"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/activity_user_food" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#88ffff00"
        android:text="@string/activity_user_its_ok" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/button3"
        android:background="#88ff0000"
        android:text="@string/activity_user_hate_it" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_marginRight="27dp"
        android:layout_toLeftOf="@+id/button3"
        android:background="#8800ff00"
        android:text="@string/activity_user_love_it" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="96dp"
        android:background="#ffcccccc"
        android:text="@string/activity_user_create_update" />

    <Spinner
        android:id="@+id/spinner_user_food"
        style="@style/SpinnerAsEditText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:background="#88cccccc"
        android:ellipsize="marquee"
        android:dropDownWidth="match_parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:ellipsize="end"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/activity_user_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:ellipsize="end"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="@string/activity_user_email" />

</RelativeLayout>