<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReportActivity" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/description"
        android:src="@drawable/main_logo" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="14dp"
        android:layout_centerHorizontal="true"
        android:text="@string/report_friends"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/report_spinner_friends"
        android:layout_width="match_parent"
        style="@style/SpinnerAsEditText"
        android:layout_height="60dp"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/report_spinner_foods"
        android:layout_marginTop="6dp"
        android:background="#88cccccc" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/report_spinner_friends"
        android:layout_marginTop="14dp"
        android:layout_centerHorizontal="true"
        android:text="@string/report_foods"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
    <Spinner
        android:id="@+id/report_spinner_foods"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textView2"
        style="@style/SpinnerAsEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="#88cccccc" />







</RelativeLayout>
